--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,6 +3,6 @@
 #    controller: App\Controller\DefaultController::index
 # config/routes.yaml
 
-admin_artistes_suppression:
-    path: /admin/artistes/suppression/{id}
-    controller: App\Controller\Admin\ArtistesController::suppression
+# admin_artistes_suppression:
+#     path: /admin/artistes/suppression/{id}
+#     controller: App\Controller\Admin\ArtistesController::suppression
